--- a/src/styles/invite-form.module.css
+++ b/src/styles/invite-form.module.css
@@ -10,15 +10,9 @@
   box-sizing: border-box;
 
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   gap: 2rem;
-}
-
-@media only screen and (max-width: 768px)  {
-  .form {
-    gap: 1rem;
-  }
 }
 
 .spacer {
@@ -46,11 +40,13 @@
   flex-shrink: 0;
 
   width: 100%;
+  max-width: 768px;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 12px;
+  gap: 0.25rem;
 }
 
 .labelText {
@@ -58,12 +54,14 @@
 }
 
 .checkboxLabel {
+  max-width: 768px;
+
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  gap: 12px;
+  gap: 0.25rem;
 }
 
 .input {
@@ -143,4 +141,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+
+@media only screen and (max-width: 768px),
+  only screen and (max-height: 800px) {
+  .form {
+    gap: 1rem;
+  }
 }
